--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.9",
     "@unform/core": "^2.1.3",
@@ -20,9 +21,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
+    "uuidv4": "^6.2.6",
     "web-vitals": "^0.2.4",
     "yup": "^0.30.0"
   },
